@@ -1,4 +1,4 @@
-.\" This manpage 2003-2020 (C) by Christian Garbs <mitch@cgarbs.de>
+.\" This manpage 2003-2025 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL v1 or, at your option, any later version.
 .TH "GBSPLAYRC" "5" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
@@ -39,6 +39,25 @@ big endian
 .B Integer
 An integer number in decimal.
 .TP
+.B Loop mode
+A string to select the loop mode:
+.RS
+.IP \fBnone\fP
+no looping
+.IP \fBrange\fP
+loop over selected subsongs
+.IP \fBsingle\fP
+loop a single subsong
+.RE
+.P
+.RS
+See
+.I LOOP MODES
+in
+.BR gbsplay (1)
+for details.
+.RE
+.TP
 .B Plugin
 The name of an output plugin.
 Run `\fIgbsplay\ \-o\ list\fP' to get a list of all available output plugins.
@@ -52,9 +71,12 @@ Set the fadeout time in seconds.
 Instead of cutting the subsong off hard, do a soft fadeout.
 .TP
 .BR loop " = " \fIBoolean\fP
-Enable or disable loop mode.
-In loop mode the playback will restart from the beginning
-after the last subsong has been played.
+Set the loop mode to "\fBrange\fP" when enabled.
+Set the loop mode to "\fBnone\fP" when disabled.
+Deprecated in favor of the \fBloop_mode\fP option.
+.TP
+.BR loop_mode " = " \fILoop\ mode\fP
+Set the desired loop mode.
 .TP
 .BR output_plugin " = " \fIPlugin\fP
 Set the sound output plugin.
@@ -76,7 +98,7 @@ the player will skip to the next subsong.
 .BR subsong_gap " = " \fIInteger\fP
 Set the subsong gap in seconds.
 Before playing the next subsong after the subsong timeout,
-\fIsubsong\-gap\fP seconds of silence will be played.
+\fIsubsong_gap\fP seconds of silence will be played.
 .TP
 .BR subsong_timeout " = " \fIInteger\fP
 Set the subsong timeout in seconds.
