@@ -1,0 +1,3 @@
+loop=1
+loop_mode=single
+
